--- a/assets/ui.html
+++ b/assets/ui.html
@@ -66,6 +66,12 @@
                 <use xlink:href="#svg_tools" />
             </svg>
         </span>
+        <span id="toggle-adblock" class="icon" title="Toggle Ad/Tracker Blocking">
+            <!-- simple shield icon -->
+            <svg viewBox="0 0 24 24" width="18" height="18">
+                <path d="M12 2l7 3v5c0 5-3.4 9.7-7 11-3.6-1.3-7-6-7-11V5l7-3z" fill="currentColor" />
+            </svg>
+        </span>
     </div>
 
     <script src="draggabilly.pkgd.min.js"></script>
@@ -109,6 +115,8 @@
             document.querySelector('#refresh').addEventListener('click', event => OnRefresh());
             document.querySelector('#stop').addEventListener('click', event => OnStop());
             document.querySelector('#toggle-tools').addEventListener('click', event => OnToggleTools());
+            const abBtn = document.querySelector('#toggle-adblock');
+            if (abBtn) abBtn.addEventListener('click', event => { if (window.OnToggleAdblock) OnToggleAdblock(); });
             var address = document.querySelector('#address');
             address.onkeypress = (function (e) {
                 if (e.which == '13') {
