--- a/assets/ui.html
+++ b/assets/ui.html
@@ -66,6 +66,29 @@
                 <use xlink:href="#svg_tools" />
             </svg>
         </span>
+        <span id="toggle-adblock" class="icon" title="Toggle Ad/Tracker Blocking">
+            <!-- simple shield icon -->
+            <svg viewBox="0 0 24 24" width="18" height="18">
+                <path d="M12 2l7 3v5c0 5-3.4 9.7-7 11-3.6-1.3-7-6-7-11V5l7-3z" fill="currentColor" />
+            </svg>
+        </span>
+        <!-- Overflow menu (three dots) -->
+        <span id="toggle-menu" class="icon" title="Customize and control">
+            <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true">
+                <circle cx="5" cy="12" r="2" fill="currentColor"></circle>
+                <circle cx="12" cy="12" r="2" fill="currentColor"></circle>
+                <circle cx="19" cy="12" r="2" fill="currentColor"></circle>
+            </svg>
+        </span>
+    </div>
+
+    <!-- Dropdown Menu -->
+    <div id="menu-dropdown" class="menu-dropdown hidden" role="menu" aria-hidden="true">
+        <div class="menu-item" data-action="new-tab">New tab	Ctrl+T</div>
+        <div class="menu-item" data-action="new-window">New window	Ctrl+N</div>
+        <div class="menu-separator"></div>
+        <div class="menu-item" data-action="history">History</div>
+        <div class="menu-item" data-action="downloads">Downloads</div>
     </div>
 
     <script src="draggabilly.pkgd.min.js"></script>
@@ -109,6 +132,8 @@
             document.querySelector('#refresh').addEventListener('click', event => OnRefresh());
             document.querySelector('#stop').addEventListener('click', event => OnStop());
             document.querySelector('#toggle-tools').addEventListener('click', event => OnToggleTools());
+            const abBtn = document.querySelector('#toggle-adblock');
+            if (abBtn) abBtn.addEventListener('click', event => { if (window.OnToggleAdblock) OnToggleAdblock(); });
             var address = document.querySelector('#address');
             address.onkeypress = (function (e) {
                 if (e.which == '13') {
@@ -135,6 +160,69 @@
         }
 
         bindCallbacks();
+
+        // Menu dropdown logic
+        (function initMenu() {
+            const toggleBtn = document.getElementById('toggle-menu');
+            const menu = document.getElementById('menu-dropdown');
+
+            function openMenu() {
+                if (!menu) return;
+                menu.classList.remove('hidden');
+                menu.setAttribute('aria-hidden', 'false');
+            }
+            function closeMenu() {
+                if (!menu) return;
+                menu.classList.add('hidden');
+                menu.setAttribute('aria-hidden', 'true');
+            }
+            function isMenuOpen() {
+                return menu && !menu.classList.contains('hidden');
+            }
+
+            if (toggleBtn) {
+                toggleBtn.addEventListener('click', (e) => {
+                    e.stopPropagation();
+                    if (isMenuOpen()) closeMenu(); else openMenu();
+                });
+            }
+
+            // Handle menu item clicks
+            if (menu) {
+                menu.addEventListener('click', (e) => {
+                    const item = e.target.closest('.menu-item');
+                    if (!item) return;
+                    const action = item.getAttribute('data-action');
+                    switch (action) {
+                        case 'new-tab':
+                            if (window.OnRequestNewTab) OnRequestNewTab();
+                            break;
+                        case 'new-window':
+                            // Placeholder: open a new tab as "new window" is not implemented
+                            if (window.OnRequestNewTab) OnRequestNewTab();
+                            break;
+                        case 'history':
+                            if (window.OnRequestChangeURL) OnRequestChangeURL('file:///about.html');
+                            break;
+                        case 'downloads':
+                            if (window.OnRequestChangeURL) OnRequestChangeURL('file:///release_notes.html');
+                            break;
+                    }
+                    closeMenu();
+                });
+            }
+
+            // Close on outside click
+            document.addEventListener('click', (e) => {
+                const within = e.target.closest('#menu-dropdown') || e.target.closest('#toggle-menu');
+                if (!within && isMenuOpen()) closeMenu();
+            });
+
+            // Close on Escape
+            document.addEventListener('keydown', (e) => {
+                if (e.key === 'Escape' && isMenuOpen()) closeMenu();
+            });
+        })();
     </script>
 </body>
 
