Add dynamic UI overlay height for menu
Introduces methods to expand and restore the UI overlay height when menus are opened or closed, ensuring dropdowns render correctly. Adds adblock toggle support and initialization, passing adblock state to the UI. Refactors tab overlay movement and network listener assignment for new tabs.

--- a/assets/ui.html
+++ b/assets/ui.html
@@ -170,11 +170,13 @@
                 if (!menu) return;
                 menu.classList.remove('hidden');
                 menu.setAttribute('aria-hidden', 'false');
+                if (window.OnMenuOpen) OnMenuOpen();
             }
             function closeMenu() {
                 if (!menu) return;
                 menu.classList.add('hidden');
                 menu.setAttribute('aria-hidden', 'true');
+                if (window.OnMenuClose) OnMenuClose();
             }
             function isMenuOpen() {
                 return menu && !menu.classList.contains('hidden');
