Add browser history page and backend support
Introduces a new history.html page for viewing browser history, updates menu.html to link to it, and implements history recording, retrieval, clearing, and enable/disable functionality in UI and Tab classes. JavaScript bridges are exposed for the history page to interact with native history data.

--- a/assets/menu.html
+++ b/assets/menu.html
@@ -69,7 +69,7 @@
                         if (window.OnRequestNewTab) OnRequestNewTab();
                         break;
                     case 'history':
-                        if (window.OnRequestChangeURL) OnRequestChangeURL('file:///about.html');
+                        if (window.OnRequestChangeURL) OnRequestChangeURL('file:///history.html');
                         break;
                     case 'downloads':
                         if (window.OnRequestChangeURL) OnRequestChangeURL('file:///release_notes.html');
