--- a/assets/history.html
+++ b/assets/history.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <title>History</title>
     <!-- Minimal inline favicon (book icon) so the tab shows an icon -->
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23222' d='M6 2h9a3 3 0 0 1 3 3v15.5a.5.5 0 0 1-.8.4L14 19H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2m0 2a0 0 0 0 0 0 0v13a0 0 0 0 0 0 0h8l3 2V5a1 1 0 0 0-1-1z'/%3E%3C/svg%3E" />
+    <link rel="icon" type="image/svg+xml"
+        href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23222' d='M6 2h9a3 3 0 0 1 3 3v15.5a.5.5 0 0 1-.8.4L14 19H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2m0 2a0 0 0 0 0 0 0v13a0 0 0 0 0 0 0h8l3 2V5a1 1 0 0 0-1-1z'/%3E%3C/svg%3E" />
     <link rel="stylesheet" type="text/css" href="ui.css">
     <style>
         :root {
@@ -38,7 +39,11 @@
             font-weight: 600;
         }
 
-        .controls { display: flex; align-items: center; gap: 12px; }
+        .controls {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+        }
 
         .btn {
             padding: 8px 12px;
@@ -178,7 +183,7 @@
         }
 
         // Called by native after JS bridge is bound
-        window.__ul_history_ready = function() {
+        window.__ul_history_ready = function () {
             refresh();
         }
 
