--- a/assets/menu.html
+++ b/assets/menu.html
@@ -26,8 +26,8 @@
 <body>
     <div id="menu-root">
         <div id="menu-dropdown" class="menu-dropdown" role="menu" aria-hidden="false">
-            <div class="menu-item" data-action="new-tab">New tab Ctrl+T</div>
-            <div class="menu-item" data-action="new-window">New window Ctrl+N</div>
+            <div class="menu-item" data-action="new-tab">New tab [Ctrl+T]</div>
+            <div class="menu-item" data-action="new-window">New window [Ctrl+N]</div>
             <div class="menu-separator"></div>
             <div class="menu-item" data-action="history">History</div>
             <div class="menu-item" data-action="downloads">Downloads</div>
