Add shortcut info to History button

--- a/assets/menu.html
+++ b/assets/menu.html
@@ -31,7 +31,7 @@
             <div class="menu-separator"></div>
             <div class="menu-item" id="toggle-dark" data-action="toggle-dark">Dark theme: Toggle</div>
             <div class="menu-separator"></div>
-            <div class="menu-item" data-action="history">History</div>
+            <div class="menu-item" data-action="history">History [Ctrl+H]</div>
             <div class="menu-item" data-action="downloads">Downloads</div>
         </div>
     </div>
