Open History in new tab and improve history recording
The History page now opens in a new tab via menu and shortcut actions, instead of replacing the current tab. Added JS bridge and UI handler for opening History in a new tab. History recording now coalesces consecutive identical URLs, updating the latest entry instead of duplicating. Minor code style improvements and transition effect added to menu.html.

--- a/assets/menu.html
+++ b/assets/menu.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="ui.css">
     <style>
+        * {
+            transition: all 0.2s ease-in-out;
+        }
+
         body {
             margin: 0;
             background: transparent;
@@ -84,7 +88,7 @@
                         if (window.OnToggleDarkMode) OnToggleDarkMode();
                         break;
                     case 'history':
-                        if (window.OnRequestChangeURL) OnRequestChangeURL('file:///history.html');
+                        if (window.OnOpenHistoryNewTab) OnOpenHistoryNewTab();
                         break;
                     case 'downloads':
                         if (window.OnRequestChangeURL) OnRequestChangeURL('file:///release_notes.html');
