Add global transition effect to HTML assets
Introduced a universal CSS transition to all elements in contextmenu.html and history.html for smoother UI interactions.

--- a/assets/contextmenu.html
+++ b/assets/contextmenu.html
@@ -6,6 +6,9 @@
   <title>Context Menu</title>
   <style>
     html,
+    * {
+      transition: all 0.2s ease-in-out;
+    }
     body {
       background: transparent;
       margin: 0;
