--- a/assets/history.html
+++ b/assets/history.html
@@ -8,6 +8,9 @@
         href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23222' d='M6 2h9a3 3 0 0 1 3 3v15.5a.5.5 0 0 1-.8.4L14 19H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2m0 2a0 0 0 0 0 0 0v13a0 0 0 0 0 0 0h8l3 2V5a1 1 0 0 0-1-1z'/%3E%3C/svg%3E" />
     <link rel="stylesheet" type="text/css" href="ui.css">
     <style>
+        * {
+            transition: all 0.2s ease-in-out;
+        }
         :root {
             color-scheme: light dark;
         }
