--- a/assets/ui.html
+++ b/assets/ui.html
@@ -34,6 +34,15 @@
                 <path
                     d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z" />
             </g>
+            <g id="svg_min">
+                <rect x="4" y="11" width="16" height="2" />
+            </g>
+            <g id="svg_max">
+                <rect x="4" y="4" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" />
+            </g>
+            <g id="svg_close">
+                <path d="M5 5 L19 19 M19 5 L5 19" stroke="currentColor" stroke-width="2" />
+            </g>
         </defs>
     </svg>
 
@@ -80,6 +89,17 @@
                 <circle cx="19" cy="12" r="2" fill="currentColor"></circle>
             </svg>
         </span>
+        <div class="window-controls">
+            <span id="win-min" class="icon" title="Minimize">
+                <svg viewBox="0 0 24 24" width="18" height="18"><use xlink:href="#svg_min" /></svg>
+            </span>
+            <span id="win-max" class="icon" title="Maximize/Restore">
+                <svg viewBox="0 0 24 24" width="18" height="18"><use xlink:href="#svg_max" /></svg>
+            </span>
+            <span id="win-close" class="icon" title="Close">
+                <svg viewBox="0 0 24 24" width="18" height="18"><use xlink:href="#svg_close" /></svg>
+            </span>
+        </div>
     </div>
 
     <!-- Dropdown Menu -->
@@ -137,6 +157,25 @@
             document.querySelector('#toggle-tools').addEventListener('click', event => OnToggleTools());
             const abBtn = document.querySelector('#toggle-adblock');
             if (abBtn) abBtn.addEventListener('click', event => { if (window.OnToggleAdblock) OnToggleAdblock(); });
+            // Window controls
+            const winMin = document.getElementById('win-min');
+            const winMax = document.getElementById('win-max');
+            const winClose = document.getElementById('win-close');
+            if (winMin) winMin.addEventListener('click', ()=>{ if (window.OnWindowMinimize) OnWindowMinimize(); });
+            if (winMax) winMax.addEventListener('click', ()=>{ if (window.OnWindowToggleMaximize) OnWindowToggleMaximize(); });
+            if (winClose) winClose.addEventListener('click', ()=>{ if (window.OnWindowClose) OnWindowClose(); });
+            // Drag window when clicking the top bar (excluding interactive elements)
+            const bar = document.getElementById('bar');
+            bar.addEventListener('mousedown', (e)=>{
+                const target = e.target;
+                if (target.closest('#address') || target.closest('.icon')) return;
+                if (e.button === 0 && window.OnBeginWindowDrag) OnBeginWindowDrag();
+            });
+            // Double-click to toggle maximize
+            bar.addEventListener('dblclick', (e)=>{
+                if (e.target.closest('#address')) return;
+                if (window.OnWindowToggleMaximize) OnWindowToggleMaximize();
+            });
             var address = document.querySelector('#address');
             address.onkeypress = (function (e) {
                 if (e.which == '13') {
