Improve tab bar layout and add-tab button styling
Refactored the tab bar to use flexbox for better alignment and spacing. Updated the add-tab button to be inside the tab bar, styled it for consistency, and improved accessibility. Fixed tab width calculation logic and event binding for the add-tab button.

--- a/assets/ui.html
+++ b/assets/ui.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <button id="chrome-tabs-add-tab">+ New Tab</button>
     <div class="chrome-tabs" data-chrome-tabs-instance-id="0">
         <div class="chrome-tabs-content"></div>
+        <button id="chrome-tabs-add-tab" class="chrome-tabs-add-tab">+ New Tab</button>
         <div class="chrome-tabs-bottom-bar" style="z-index: 3;"></div>
     </div>
 
