Refactor New Tab Button Placement Placement and Styling
Moves the add tab button inside the .chrome-tabs-content container and updates its styling for improved alignment and appearance. JavaScript logic now dynamically positions the button after the last tab and calculates available tab widths accordingly. The HTML markup is updated to reflect the new structure, and the button label is now handled via CSS.

--- a/assets/ui.html
+++ b/assets/ui.html
@@ -8,9 +8,10 @@
 </head>
 
 <body>
-    <div class="chrome-tabs" data-chrome-tabs-instance-id="0">
-        <div class="chrome-tabs-content"></div>
-        <button id="chrome-tabs-add-tab" class="chrome-tabs-add-tab">+ New Tab</button>
+        <div class="chrome-tabs" data-chrome-tabs-instance-id="0">
+        <div class="chrome-tabs-content">
+            <button id="chrome-tabs-add-tab" class="chrome-tabs-add-tab" aria-label="New Tab"></button>
+        </div>
         <div class="chrome-tabs-bottom-bar" style="z-index: 3;"></div>
     </div>
 
